2007-11-19 Eloy Duran <e.duran@superalloy.nl>

	* rucola_generators/rucola_plugin/templates/init.rb.erb:

	- Use the updated #before_boot & #after_boot methods.
	- Added the new #after_launch method.

2007-11-19 Eloy Duran <e.duran@superalloy.nl>

	* TODO,
	  lib/rucola/initializer.rb,
	  lib/rucola/plugin.rb,
	  lib/rucola/rucola_support/notifications/notifications.rb,
	  test/test_notifications.rb,
	  test/test_plugin.rb:

	- Added Plugin#after_launch which uses a PluginRunner class that uses NSNotifications
	  to run plugin hooks after the application has started.
	- Cleaned the test_notifications file.
	- Added TODO, which is to revert r116.

2007-11-19 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/initializer.rb,
	  lib/rucola/plugin.rb,
	  test/test_initializer.rb,
	  test/test_plugin.rb:

	- Fixed Plugin#before_boot and Plugin#after_boot, they can't take a initializer parameter.
	- Refactored the plugin calls.
	- Made initializer use the refactored methods.

2007-11-19 Eloy Duran <e.duran@superalloy.nl>

	* TODO,
	  lib/rucola/rucola_support/notifications/notifications.rb,
	  test/test_notifications.rb:

	Deprecated Notifications#notify_on in favor of Notifications#when.

2007-11-18 Chris McGrath <chris@octopod.info>

	* TODO,
	  lib/rucola/initializer.rb:

	- Add some TODOs re plugins and testing
	- Change initializer to check if environment is release rather than
		debug so that we can have the same setup for debug and test. Fixes
		problem when AR plugin installed in app.

2007-11-18 Chris McGrath <chris@octopod.info>

	* Manifest.txt,
	  rucola_generators/rucola_plugin/USAGE,
	  rucola_generators/rucola_plugin/rucola_plugin_generator.rb,
	  rucola_generators/rucola_plugin/templates/init.rb.erb,
	  test/test_rucola_plugin_generator.rb:

	- Add script/generate rucola_plugin for rucola apps

2007-11-18 Chris McGrath <chris@octopod.info>

	* test/test_plugin.rb:

	- Fix failing plugin test

2007-11-16 Eloy Duran <e.duran@superalloy.nl>
