@@ -2,13 +2,13 @@ require 'osx/cocoa'
 
 module Rucola
   module Notifications
-    # This Notifications module will add a class method called +when+, which registers
+    # This Notifications module will add a class method called +notify_on+, which registers
     # your object for the given notification and executes the given block when the
     # notification is posted to the OSX::NSNotificationCenter.defaultCenter.
     #
     #   class FooController < OSX::NSObject
     #
-    #     when OSX::NSApplicationDidFinishLaunchingNotification do |notification|
+    #     notify_on OSX::NSApplicationDidFinishLaunchingNotification do |notification|
     #       puts "Application did finish launching."
     #       p notification
     #     end
@@ -60,7 +60,7 @@ module Rucola
         #
         #   class FooController < OSX::NSObject
         #
-        #     when OSX::NSApplicationDidFinishLaunchingNotification do |notification|
+        #     notify_on OSX::NSApplicationDidFinishLaunchingNotification do |notification|
         #       puts "Application did finish launching."
         #       p notification
         #     end
@@ -74,7 +74,7 @@ module Rucola
         # So :application_did_finish_launching becomes 'NSApplicationDidFinishLaunchingNotification'.
         #
         # You can even register shortcut prefixes. See +notification_prefix+.
-        def when(notification, &block)
+        def notify_on(notification, &block)
           
           notification_name = resolve_notification_name(notification)
           method_name = "_handle_#{notification_name.snake_case}".to_sym
@@ -87,6 +87,29 @@ module Rucola
           @_registered_notifications ||= {}
           @_registered_notifications[notification_name.to_s] = method_name
         end
+        
+        # Registers the object for the given notification and executes the given block when the
+        # notification is posted to the OSX::NSNotificationCenter.defaultCenter.
+        #
+        #   class FooController < OSX::NSObject
+        #
+        #     once OSX::NSApplicationDidFinishLaunchingNotification do |notification|
+        #       puts "Application did finish launching."
+        #       p notification
+        #     end
+        #
+        #     # code
+        #
+        #   end
+        #
+        # You can also pass it a symbol as +notification+ in which case it will be exapnded.
+        # It will first check if the name + 'Notification' exists, if not it will prepend 'NS'.
+        # So :application_did_finish_launching becomes 'NSApplicationDidFinishLaunchingNotification'.
+        #
+        # You can even register shortcut prefixes. See +notification_prefix+.
+        #
+        # FIXME: Which is better +once+ or +notify_on+?
+        alias_method :once, :notify_on
         
         # Register a callback when a notification is posted.
         #
