@@ -15,7 +15,7 @@ describe 'Rucola::Notifications' do
   it "should handle notifications when included" do
     FooNotifiable.instance_variable_get(:@_registered_notifications).should.be.nil
     
-    FooNotifiable.when 'FooNotification' do |notification|
+    FooNotifiable.notify_on 'FooNotification' do |notification|
       some_instance_method
     end
     
@@ -29,7 +29,7 @@ describe 'Rucola::Notifications' do
   end
   
   it "should be able to handle the original string representations of the notifications" do
-    FooNotifiable.when 'NSApplicationDidFinishLaunchingNotification' do |notification|
+    FooNotifiable.notify_on 'NSApplicationDidFinishLaunchingNotification' do |notification|
       app_finished_launching
     end
     
@@ -39,7 +39,7 @@ describe 'Rucola::Notifications' do
   end
   
   it "should also be able to handle the abbreviated symbol representation of a notification" do
-    FooNotifiable.when :application_did_become_active do |notification|
+    FooNotifiable.notify_on :application_did_become_active do |notification|
       app_did_become_active
     end
     
@@ -51,7 +51,7 @@ describe 'Rucola::Notifications' do
   it "should also allow the user to define shortcuts" do
     FooNotifiable.notification_prefix :win => :window
     
-    FooNotifiable.when :win_did_become_key do |notification|
+    FooNotifiable.notify_on :win_did_become_key do |notification|
       window_did_become_key
     end
     
@@ -61,13 +61,23 @@ describe 'Rucola::Notifications' do
   end
   
   it "should by default have the shortcut app => application" do
-    FooNotifiable.when :app_will_terminate do |notification|
+    FooNotifiable.notify_on :app_will_terminate do |notification|
       app_will_terminate_called!
     end
     
     @instance = FooNotifiable.alloc.init
     @instance.expects(:app_will_terminate_called!)
     OSX::NSNotificationCenter.defaultCenter.postNotificationName_object(OSX::NSApplicationWillTerminateNotification, self)
+  end
+  
+  it "should also work with `once` instead of `notify_on`" do
+    FooNotifiable.once :app_did_become_active do |notification|
+      app_did_become_active!
+    end
+    
+    @instance = FooNotifiable.alloc.init
+    @instance.expects(:app_did_become_active!)
+    OSX::NSNotificationCenter.defaultCenter.postNotificationName_object(OSX::NSApplicationDidBecomeActiveNotification, self)
   end
   
   it "should call a given method when a certain notification is called" do
